fix missing bracket in paper.bib

--- a/paper.bib
+++ b/paper.bib
@@ -30,7 +30,8 @@
   url = {https://cran.r-project.org/doc/manuals/r-release/R-lang.html}
 }
 
-@misc{euro,
-author = {© Euromonitor International},
-title = {Microwave Company Market Shares for the United States and China, 2012-2017},
-howpublished= {\url{https://www.portal.euromonitor.com/}} 
+@online{euro,
+  author = {© Euromonitor International},
+  title = {Microwave Company Market Shares for the United States and China, 2012-2017},
+  url = {https://www.portal.euromonitor.com/}
+}
